--- a/main.html
+++ b/main.html
@@ -11,23 +11,105 @@
 </head>
 
 <body>
-<div id="vueApp">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
+          aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span
+            class="navbar-toggler-icon"></span></button>
+        <a class="navbar-brand" href="javascript:void(0)" tabindex="-1">coolprop</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"> <a class="nav-link" tabindex="1" href="javascript:window.location.reload()">📰
+                Reload </a> </li>
+          </ul>
+        </div>
+      </nav>
+  <div id="vueApp">
+    <div class="form-row">
+        <div class="form-group col-1">input:</div>
+      <div class="form-group col-2">
+        <select v-model="para.as" class="form-control">
+          <option v-for="item in symbol">{{item}}</option>
+        </select>
+      </div>
+      <div class="form-group col-2">
+        <input type="number" v-model.number="para.av" class="form-control w-20">
+      </div>
+      <div class="form-group col-2">
+        <select v-model="para.bs" class="form-control w-20">
+          <option v-for="item in symbol">{{item}}</option>
+        </select>
+      </div>
+      <div class="form-group col-2">
+        <input type="number" v-model.number="para.bv" class="form-control w-20">
+      </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-1">input:</div>
+      <div class="form-group col-3">
+        <select v-model="para.ref" class="form-control w-20">
+          <option v-for="item in refrigerant">{{item}}</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-1">output:</div>
+        <div class="form-group col-2">
+            <select v-model="para.rs" class="form-control">
+              <option v-for="item in symbol">{{item}}</option>
+            </select>
+        </div>
+    </div>
 
+
+  <div class="form-row">
+      <ul class="list-group list-group-flush">
+          <li class="list-group-item" v-for="item in rzt">Module.PropsSI({{item.rs}}, {{item.as}}, {{item.av}}, {{item.bs}}, {{item.bv}}, {{item.ref}}) = {{item.result}}</li>
+      </ul>
+  </div>
 </div>
+  <script src="coolprop/6.3.0/coolprop.js" type="text/javascript"></script>
+  <script src="node_modules/vue/dist/vue.min.js"></script>
+  <script>
+    var myApp = new Vue({
+      el: '#vueApp',
+      data: {
+        refrigerant: ["R22", "R134a", "R404A", "R407C", "R410A", "R32"],
+        symbol: ['H', 'P', 'T', 'Q'],
+        para: {
+          rs: "H",
+          as: "P",
+          av: 60000,
+          bs: "T",
+          bv: 297.15,
+          ref: "R22",
+        },
+        rzt:[]
+      },
+      watch: {
+        para:{
+          deep:true,
+          handler:function(oldValue,newValue){
+            if (Module && Module.PropsSI){
+              let result=Module.PropsSI(newValue.rs, newValue.as, newValue.av, newValue.bs, newValue.bv, newValue.ref)
+              this.rzt.unshift({
+                'rs':newValue.rs, 
+                'as':newValue.as, 
+                'av':newValue.av, 
+                'bs':newValue.bs, 
+                'bv':newValue.bv, 
+                'ref':newValue.ref, 
+                'result' :result
+              })
+            }
+          },
+          immediate: true
+        }
+      },
+      computed: {
 
-
-<script src="coolprop/6.3.0/coolprop.js" type="text/javascript"></script>
-<script src="node_modules/vue/dist/vue.min.js"></script>
-<script>
-var myApp = new Vue({
-    el: '#vueApp',
-    data: {
-        refrigerant: ['R22','R134a']
-    },
-    method:{},
-    computed:{}
-})
-</script>
+      }
+    })
+  </script>
 
 </body>
 
